--- a/template/modals/stretchPanel/_stretch-panel.scss
+++ b/template/modals/stretchPanel/_stretch-panel.scss
@@ -136,7 +136,8 @@
 }
 
 .stretch-panel-container {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 24px;
   padding: 64px;
 }
