--- a/template/modals/stretchPanel/stretch-panel.html
+++ b/template/modals/stretchPanel/stretch-panel.html
@@ -1617,7 +1617,8 @@
                             </div>
                             <button
                               class="button-non-press button-non-press_tiny"
-                              data-type="btn">
+                              data-type="btn"
+                              data-modal-name="manipulation-sub-level-price">
                               +
                             </button>
                           </div>
@@ -1652,7 +1653,8 @@
                             </div>
                             <button
                               class="button-non-press button-non-press_tiny"
-                              data-type="btn">
+                              data-type="btn"
+                              data-modal-name="manipulation-sub-level-price">
                               +
                             </button>
                           </div>
@@ -12772,5 +12774,208 @@
     <div class="modal-overlay closeModalTrigger"></div>
 
     <div class="profit-range"></div>
+  </div>
+
+  <div class="modal-container d-none" data-modal="manipulation-sub-level-price">
+    <div class="modal-overlay closeModalTrigger"></div>
+
+    <div class="modal-wrapper modal-attention">
+      <div class="modal-window-wrap addFieldsInstance">
+        <div class="modal-window-header">
+          <h4 class="modal-window-title text_small text__color_grey">
+            Manipulation sub-level price
+          </h4>
+          <img
+            class="modal-window-close-icon closeModalTrigger"
+            src="./img/close.svg"
+            alt="close-cross" />
+        </div>
+        <div class="modal-attention__grid lineFieldInstance py-2">
+          <button class="button-new w-100 text_regular" data-type="btn">
+            Protect SL
+          </button>
+
+          <div class="modal-grid lineFieldContainer">
+            <div class="line lineFieldRow">
+              <div class="d-flex align-items-center gap-2">
+                <div
+                  class="input-container-wrap input-container-wrap_large-2 flex-grow-1"
+                  data-input="input-field">
+                  <div class="input-wrapp">
+                    <input
+                      class="input-field text_large text__color_dark-grey"
+                      type="text"
+                      data-type="number"
+                      data-unit="float" />
+                  </div>
+                  <div class="input-text-center">
+                    <div
+                      class="data-wrap"
+                      data-type="dynamic"
+                      data-state="ture">
+                      <p class="text_large text__color_dark-grey">1993.86</p>
+                      <p class="text_small text__color_dark-grey"></p>
+                    </div>
+                  </div>
+                </div>
+
+                <button
+                  class="button-new button-new-small button-non-press text_large btn-shadow removeLineFieldButton">
+                  X
+                </button>
+              </div>
+            </div>
+
+            <div class="line lineFieldRow">
+              <div class="d-flex align-items-center gap-2">
+                <div
+                  class="input-container-wrap input-container-wrap_large-2 flex-grow-1"
+                  data-input="input-field">
+                  <div class="input-wrapp">
+                    <input
+                      class="input-field text_large text__color_dark-grey"
+                      type="text"
+                      data-type="number"
+                      data-unit="float" />
+                  </div>
+                  <div class="input-text-center">
+                    <div
+                      class="data-wrap"
+                      data-type="dynamic"
+                      data-state="ture">
+                      <p class="text_large text__color_dark-grey">1793.84</p>
+                      <p class="text_small text__color_dark-grey"></p>
+                    </div>
+                  </div>
+                </div>
+
+                <button
+                  class="button-new button-new-small button-non-press text_large btn-shadow removeLineFieldButton">
+                  X
+                </button>
+              </div>
+            </div>
+
+            <div class="line lineFieldRow">
+              <div class="d-flex align-items-center gap-2">
+                <div
+                  class="input-container-wrap input-container-wrap_large-2 flex-grow-1"
+                  data-input="input-field">
+                  <div class="input-wrapp">
+                    <input
+                      class="input-field text_large text__color_dark-grey"
+                      type="text"
+                      data-type="number"
+                      data-unit="float" />
+                  </div>
+                  <div class="input-text-center">
+                    <div
+                      class="data-wrap"
+                      data-type="dynamic"
+                      data-state="ture">
+                      <p class="text_large text__color_dark-grey">1993.1</p>
+                      <p class="text_small text__color_dark-grey"></p>
+                    </div>
+                  </div>
+                </div>
+
+                <button
+                  class="button-new button-new-small button-non-press text_large btn-shadow removeLineFieldButton">
+                  X
+                </button>
+              </div>
+            </div>
+
+            <div class="line lineFieldRow">
+              <div class="d-flex align-items-center gap-2">
+                <div
+                  class="input-container-wrap input-container-wrap_large-2 flex-grow-1"
+                  data-input="input-field">
+                  <div class="input-wrapp">
+                    <input
+                      class="input-field text_large text__color_dark-grey"
+                      type="text"
+                      data-type="number"
+                      data-unit="float" />
+                  </div>
+                  <div class="input-text-center">
+                    <div
+                      class="data-wrap"
+                      data-type="dynamic"
+                      data-state="ture">
+                      <p class="text_large text__color_dark-grey">1995.84</p>
+                      <p class="text_small text__color_dark-grey"></p>
+                    </div>
+                  </div>
+                </div>
+
+                <button
+                  class="button-new button-new-small button-non-press text_large btn-shadow removeLineFieldButton">
+                  X
+                </button>
+              </div>
+            </div>
+
+            <template id="lineFieldTemplate">
+              <div class="line lineFieldRow">
+                <div class="d-flex align-items-center gap-2">
+                  <div
+                    class="input-container-wrap input-container-wrap_large-2 flex-grow-1"
+                    data-input="input-field">
+                    <div class="input-wrapp">
+                      <input
+                        class="input-field text_large text__color_dark-grey"
+                        type="text"
+                        data-type="number"
+                        data-unit="float" />
+                    </div>
+                    <div class="input-text-center">
+                      <div
+                        class="data-wrap"
+                        data-type="dynamic"
+                        data-state="ture">
+                        <p class="text_large text__color_dark-grey lineFieldValue">1995.84</p>
+                        <p class="text_small text__color_dark-grey"></p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <button
+                    class="button-new button-new-small button-non-press text_large btn-shadow removeLineFieldButton">
+                    X
+                  </button>
+                </div>
+              </div>
+            </template>
+          </div>
+
+          <div class="d-flex align-items-center gap-2">
+            <div
+              class="input-container-wrap input-container-wrap_large-2 flex-grow-1"
+              data-input="input-field">
+              <div class="input-wrapp">
+                <input
+                  class="input-field text_large text__color_dark-grey"
+                  type="text"
+                  data-type="number"
+                  data-unit="float" />
+              </div>
+              <div class="input-text-center">
+                <div class="data-wrap" data-type="dynamic" data-state="ture">
+                  <p
+                    class="text_large text__color_dark-grey createNewLineFieldInput"></p>
+                  <p class="text_small text__color_dark-grey"></p>
+                </div>
+              </div>
+            </div>
+
+            <button
+              class="button-new button-new-small button-non-press text_large btn-shadow createNewLineFieldButton">
+              +
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
