feat: add trendline setup modal

--- a/template/modals/stretchPanel/stretch-panel.html
+++ b/template/modals/stretchPanel/stretch-panel.html
@@ -1713,7 +1713,8 @@
                           <div class="d-flex justify-content-end">
                             <button
                               class="button-non-press button-non-press_save-small text_large"
-                              data-type="btn">
+                              data-type="btn"
+                              data-modal-name="trendline-setup">
                               Setup
                             </button>
                           </div>
@@ -12934,7 +12935,10 @@
                         class="data-wrap"
                         data-type="dynamic"
                         data-state="ture">
-                        <p class="text_large text__color_dark-grey lineFieldValue">1995.84</p>
+                        <p
+                          class="text_large text__color_dark-grey lineFieldValue">
+                          1995.84
+                        </p>
                         <p class="text_small text__color_dark-grey"></p>
                       </div>
                     </div>
@@ -12973,6 +12977,201 @@
               class="button-new button-new-small button-non-press text_large btn-shadow createNewLineFieldButton">
               +
             </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal-container d-none" data-modal="trendline-setup">
+    <div class="modal-overlay closeModalTrigger"></div>
+
+    <div class="modal-wrapper modal-attention">
+      <div class="modal-window-wrap addFieldsInstance">
+        <div class="modal-window-header">
+          <h4 class="modal-window-title text_small text__color_grey">
+            Trendline setup
+          </h4>
+          <img
+            class="modal-window-close-icon closeModalTrigger"
+            src="./img/close.svg"
+            alt="close-cross" />
+        </div>
+        <div class="modal-attention__grid lineFieldInstance py-2">
+          <div class="d-flex justify-content-between">
+            <div class="button-new-wrapper button-new-wrap-big btn-shadow">
+              <button
+                class="button-new button-group button-group_normal-1 text_regular btn-active"
+                data-type="btn">
+                Manipulation
+              </button>
+
+              <button
+                class="button-new button-group button-group_normal-2 text_regular"
+                data-type="btn">
+                Breakout
+              </button>
+            </div>
+
+            <div class="data-info-container data-info-container_tiny">
+              <div
+                class="input-container-wrap input-container-wrap_tiny"
+                data-input="input-field">
+                <div class="input-wrapp">
+                  <input
+                    class="input-field text_large text__color_dark-grey"
+                    type="text"
+                    data-type="number"
+                    data-unit="times" />
+                </div>
+                <div class="input-text-center">
+                  <div class="data-wrap" data-type="dynamic" data-state="ture">
+                    <p class="text_large text__color_dark-grey">3</p>
+                    <p class="text_small text__color_dark-grey">times</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="d-flex align-items-center justify-content-between">
+            <button
+              class="button-non-press button-non-press_big text_regular"
+              data-type="btn"
+              data-name="dates">
+              Date & Time
+            </button>
+
+            <div class="d-flex gap-2">
+              <div class="data-info-container data-info-container_tiny">
+                <div
+                  class="input-container-wrap input-container-wrap_tiny"
+                  data-input="input-field">
+                  <div class="input-wrapp">
+                    <input
+                      class="input-field text_large text__color_dark-grey"
+                      type="text"
+                      data-type="number" />
+                  </div>
+                  <div class="input-text-center">
+                    <div
+                      class="data-wrap"
+                      data-type="dynamic"
+                      data-state="ture">
+                      <p class="text_large text__color_dark-grey">2.901</p>
+                      <p class="text_small text__color_dark-grey"></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <button
+                class="button-non-press button-non-press_save-small text_large"
+                data-type="btn">
+                Pick
+              </button>
+            </div>
+          </div>
+
+          <div class="d-flex align-items-center justify-content-between">
+            <button
+              class="button-non-press button-non-press_big text_regular"
+              data-type="btn"
+              data-name="dates">
+              Date & Time
+            </button>
+
+            <div class="d-flex gap-2">
+              <div class="data-info-container data-info-container_tiny">
+                <div
+                  class="input-container-wrap input-container-wrap_tiny"
+                  data-input="input-field">
+                  <div class="input-wrapp">
+                    <input
+                      class="input-field text_large text__color_dark-grey"
+                      type="text"
+                      data-type="number" />
+                  </div>
+                  <div class="input-text-center">
+                    <div
+                      class="data-wrap"
+                      data-type="dynamic"
+                      data-state="ture">
+                      <p class="text_large text__color_dark-grey">2.901</p>
+                      <p class="text_small text__color_dark-grey"></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <button
+                class="button-non-press button-non-press_save-small text_large"
+                data-type="btn">
+                Pick
+              </button>
+            </div>
+          </div>
+
+          <div class="d-flex align-items-center justify-content-between">
+            <p class="text text_regular text__color_dark-grey">Confirmation</p>
+
+            <div class="d-flex gap-2">
+              <div class="data-info-container data-info-container_tiny">
+                <div
+                  class="input-container-wrap input-container-wrap_tiny-3 left"
+                  data-input="input-field">
+                  <div class="input-wrapp">
+                    <input
+                      class="input-field input-field_left text_large text__color_dark-grey"
+                      type="text"
+                      data-type="number"
+                      data-unit="date" />
+                  </div>
+                  <div class="input-text-center">
+                    <div
+                      class="data-wrap"
+                      data-type="dynamic"
+                      data-state="ture">
+                      <p class="text_large text__color_dark-grey">1</p>
+                      <p
+                        class="text_small text__color_dark-grey"
+                        data-mode="hour">
+                        h
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <button
+                  class="button-input button-time-small right text_small"
+                  data-type="time"
+                  data-mode="hour">
+                  h
+                </button>
+              </div>
+
+              <div class="data-info-container data-info-container_tiny">
+                <div
+                  class="input-container-wrap input-container-wrap_tiny"
+                  data-input="input-field">
+                  <div class="input-wrapp">
+                    <input
+                      class="input-field text_large text__color_dark-grey"
+                      type="text"
+                      data-type="number"
+                      data-unit="times" />
+                  </div>
+                  <div class="input-text-center">
+                    <div
+                      class="data-wrap"
+                      data-type="dynamic"
+                      data-state="ture">
+                      <p class="text_large text__color_dark-grey">3</p>
+                      <p class="text_small text__color_dark-grey">times</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
