fix: console error

--- a/template/modals/stretchPanel/stretch-panel.html
+++ b/template/modals/stretchPanel/stretch-panel.html
@@ -12997,7 +12997,7 @@
             src="./img/close.svg"
             alt="close-cross" />
         </div>
-        <div class="modal-attention__grid lineFieldInstance py-2">
+        <div class="modal-attention__grid py-2">
           <div class="d-flex justify-content-between">
             <div class="button-new-wrapper button-new-wrap-big btn-shadow">
               <button
